--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 123456
-    url: jdbc:mysql://127.0.0.1/morning?characterEncoding=utf-8&useSSL=false
+    password: root
+    url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+#    jdbc:mysql://localhost:3306/csm"+"?serverTimezone=GMT%2B8
   jpa:
     show-sql: true
   jackson:
