微信服务器验证，消息通知处理入口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ wechat:
   mpAppId: wxe2c4567fb58dd5a7
   mpAppSecret: 14028ef0bd7f2982da952e209a5c442a #借用号appId,appSecret
   mpToken: morning
+  mpAesKey: n8U4dp9K5eWl4dOp8pBhqSVgGKSWlxHo85yVsw8WMIy
 #  openAppId: wx6ad144e54af67d87
 #  openAppSecret: 91a2ff6d38a2bbccfb7e9f9079108e2e #开放平台测试号appId,appSecret
   openAppId: wx6ad144e54af67d87
